# feedpulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
feedpulse/: __init__.py  api.py  bot.py  config.py  db.py  fetcher.py  i18n.py  main.py  scheduler.py
